Fix chat not showing

--- a/src/components/Chatting/Style/MessagesBody.css
+++ b/src/components/Chatting/Style/MessagesBody.css
@@ -1,11 +1,10 @@
 .chattingMessagesBox {
   margin-top: 80px;
-  margin-bottom: 60px;
+  padding-bottom: 80px;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
-.MessageBody-container {
-  background: #e5e5e5;
+.MessagesBody-container {
 }
 /* chat Message */
 .chatMessage-myMessage {
